"Removed machine specific file path"